# btc-alert-test

./: Dockerfile  README.md  note.ipynb  okteto-pipeline.yaml  pyproject.toml
k8s/: deployment.tpl  deployment.tpl.yaml  deployment.yaml
src/btc_alert_test/: main.py
