[tool.poetry]
name = "btc-alert-test"
version = "0.1.0"
description = ""
authors = ["agari"]

[tool.poetry.scripts]
start = 'btc_alert_test.main:main'

[tool.poetry.dependencies]
python = "^3.9"
ccxt = "^1.62.90"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.6.0"
black = "^21.11b1"
flake8 = "^4.0.1"
pydantic = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
